Version 1.0.1~dev

	* No need to explicitly reset SIGPIPE handler on sub-processes

Version 1.0.0 Released on 2021/09/17

	* Python3 port is now stable

Version 0.10.7 Released on 2020/04/09

	* Migrate toolbox2 to Python3

Version 0.10.6 Released on 2020/04/08

	* Fix installation directory

Version 0.10.5 Released on 2020/04/07

	*  Modernize packaging

Version 0.10.4 Released on 2017/05/10

	* Use aac codec and keep compatibility with libfaac

Version 0.10.3 Released on 2015/09/01

	* Allow to cancel an Action and/or a Worker
	* Do not try to install tests
	* Use raw strings for regexps
	* Some style fixes
	* Add a "--version" option to the "toolbox2" command

Version 0.10.2 Released on 2015/05/12

	* Change the default pixel format value to be the same as the source

Version 0.10.1 Released on 2015/03/05

	* Fix a thumbnail generation regression for some videos

Version 0.10.0 Released on 2015/03/04

	* Switch the build system to setuptools
	* Rewrite man pages in RST (better github/gitlab support)
	* Bootstrap a test suite
	* Add a "--version" option to toolbox2-transcode
	* Allow to transcode a single frame
	* Allow to seek (start the transcode at a specified offset)
	* Add support for 'lt', 'standard' and 'hq' prores profiles
	* Add target bitrates for ProRes @ 1280x720
	* Fix thumbnail generation for very short videos
	* Various fixes

Version 0.9.0 Released on 2014/09/17

	* Drop Action._execute_worker in favor of Action._execute_current_worker.
	* Call command callback even if there is no output data read from standard
	  outputs, refs: #6583.
	* Compute progress in bmx worker, closes: #6583.
	* Remove memory_limit from Command.run arguments.
	* Let the worker specify the command kill timeout.
	* Increase kill timeout limit to 5 hours for the bmx worker.
	* Support text and timecode burning through drawtext method in
	  ffmpeg worker, refs: #6582.
	* Support text and timecode burning in transcode action, refs: #6582.